--- a/PizzaPlace/Pages/CustomerEntry.razor
+++ b/PizzaPlace/Pages/CustomerEntry.razor
@@ -3,7 +3,7 @@
           Model="@Customer">
     <DataAnnotationsValidator />
 
-    <InputWatcher FieldChanged="@FieldChanged" />
+    <InputWatcher @ref="inputWatcher" FieldChanged="@FieldChanged" />
     <div class="form-group row mb-1">
         <label class="col-sm-3 col-form-label"
                for="FirstName">Name:</label>
@@ -33,6 +33,7 @@
     </div>
     <div class="form-group mb-0">
         <button type="submit" id="BtnRegister"
+                disabled="@isInvalid"
                 class="@ButtonClass">
             @ButtonTitle
         </button>
@@ -40,6 +41,8 @@
 </EditForm>
 
 @code{
+   private InputWatcher inputWatcher;
+   private bool isInvalid = true;
    [Parameter]
    public string Title { get; set; }
    [Parameter]
@@ -56,5 +59,6 @@
    private void FieldChanged(string fieldName)
    {
        CustomerChanged.InvokeAsync(Customer);
+       isInvalid = !inputWatcher.Validate();
    }
 }
